# 20260605_demo002_Agentic_AI_Compliance_Check

./: .env.example  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  chainlit-replit.md
artifacts/ai-risk-app/: app.py  chainlit.md  file_parser.py  flowchart.md  graph.py  index.html  package.json  pdf_report.py  requirements.txt  vectorstore.py
artifacts/ai-risk-app/.chainlit/: config.toml
artifacts/ai-risk-app/.files/f7d9cec7-9b60-4fe9-9e80-abb1e4718a39/: bee7eb08-5f1a-4a97-bd30-1c9c4c57fca9.docx
artifacts/ai-risk-app/.replit-artifact/: artifact.toml
artifacts/ai-risk-app/tests/: test_pdf_report.py
artifacts/project-video/: index.html  package.json
artifacts/project-video/.replit-artifact/: artifact.toml
artifacts/project-video/src/: index.css
artifacts/project-video/src/components/video/: VideoTemplate.tsx  VideoWithControls.tsx
artifacts/project-video/src/components/video/video_scenes/: Scene1.tsx  Scene2.tsx  Scene3.tsx  Scene4.tsx  Scene5.tsx
