[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "chainlit>=2.11.1",
    "fpdf2>=2.8.0",
    "gradio>=6.16.0",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
]

[tool.pytest.ini_options]
testpaths = ["artifacts/ai-risk-app/tests"]
python_files = ["test_*.py"]
